<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_signin"
        android:splitMotionEvents="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edx_logo_height"
                        android:layout_marginBottom="@dimen/logo_margin_bottom"
                        android:layout_marginLeft="44dp"
                        android:layout_marginRight="44dp"
                        android:layout_marginTop="@dimen/logo_margin_top">

                        <ImageView
                            android:id="@+id/login_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/unifyx_logo" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="44dp"
                        android:paddingRight="44dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <EditText
                            android:id="@+id/email_et"
                            style="@style/edit_text_style_login"
                            android:drawableLeft="@drawable/envolop"
                            android:alpha="0.8"
                            android:hint="@string/email_username"
                            android:drawablePadding="20dp"
                            android:inputType="textEmailAddress"
                            android:maxLength="100" />
</LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <EditText
                            android:id="@+id/password_et"
                            style="@style/edit_text_style_login"
                            android:layout_marginTop="8dp"
                            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                            android:drawablePadding="20dp"
                            android:alpha="0.8"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="100" />
</LinearLayout>
                        <TextView
                            android:id="@+id/forgot_password_tv"
                            style="@style/semibold_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/forgot_password"
                            android:alpha="0.8"
                            android:textColor="@color/cyan_text_navigation"
                            android:textSize="12sp" />

                        <FrameLayout
                            android:id="@+id/login_button_layout"
                            style="@style/edX.Widget.SignInButton_cyan"
                            android:contentDescription="@string/login_btn">

                            <TextView
                                android:id="@+id/login_btn_tv"
                                style="@style/edX.Widget.SignInButton"
                                android:text="@string/login" />

                            <include layout="@layout/button_progress_indicator"
                                android:id="@+id/progress"/>
                        </FrameLayout>

                        <LinearLayout
                            android:id="@+id/panel_login_social"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <include layout="@layout/view_signin_title_row" />

                            <include layout="@layout/panel_social_auth"
                                android:id="@+id/social_auth"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/by_signing_up_tv"
                            style="@style/semibold_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:gravity="center"
                            android:text="@string/by_signing_up"
                            android:textColor="@color/white"
                            android:alpha="0.8"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/end_user_agreement_tv"
                            style="@style/semibold_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:linksClickable="true"
                            android:textColor="@color/white"
                            android:alpha="0.8"
                            android:textSize="11sp"
                            tools:text="@string/licensing_agreement" />

                        <TextView
                            android:id="@+id/version_env_tv"
                            style="@style/semibold_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center_horizontal"
                            android:alpha="0.8"
                            android:text="@string/app_version"
                            android:textColor="@color/transparent_black_80"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone">

            <include layout="@layout/panel_error_message_with_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/custom_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <include layout="@layout/panel_custom_action_bar"
                android:id="@+id/panel_custom_action_bar"/>
        </LinearLayout>

    </RelativeLayout>
</layout>
