<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/grey_nav_background">

    <FrameLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true"
        android:foreground="@drawable/light_selectable_box_overlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/nav_background"
            android:gravity="left|center"
            android:orientation="vertical"
            android:padding="@dimen/edx_margin"
            android:alpha="0.8"
            android:layout_gravity="right|bottom">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                style="@style/profile_image"
                android:layout_width="@dimen/drawer_profile_image_diameter"
                android:layout_height="@dimen/drawer_profile_image_diameter"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/edx_margin"
                android:layout_marginRight="@dimen/edx_margin"
                app:civ_border_width="@dimen/drawer_profile_image_border_width"
                tools:src="@drawable/white_circle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_tv"
                    style="@style/regular_white_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/drawer_username_text"
                    tools:targetApi="17"
                    tools:text="username" />

                <TextView
                    android:id="@+id/email_tv"
                    style="@style/white_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/widget_margin"
                    android:textSize="@dimen/drawer_email_text"
                    tools:text="user@domain.com" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:dividerPadding="@dimen/edx_margin"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/widget_margin"
        android:showDividers="middle|end"
        android:splitMotionEvents="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imgCourse"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_courses"/>
        <TextView
            android:id="@+id/drawer_option_my_courses"
            style="@style/drawer_option"
            android:text="@string/label_my_courses" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imgvideos"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_vedios"/>
        <TextView
            android:id="@+id/drawer_option_my_videos"
            style="@style/drawer_option"
            android:text="@string/label_my_videos" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/findcourse"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_findcourse"/>
        <TextView
            android:id="@+id/drawer_option_find_courses"
            style="@style/drawer_option"
            android:text="@string/label_find_courses" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imgsettings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_settings"/>
        <TextView
            android:id="@+id/drawer_option_my_settings"
            style="@style/drawer_option"
            android:text="@string/label_settings" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imgfeedback"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_feedback"/>
        <TextView
            android:id="@+id/drawer_option_submit_feedback"
            style="@style/drawer_option"
            android:text="@string/label_submit_feedback" />
</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imglogout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_logout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawer_option_logout"
                style="@style/drawer_option"
                android:text="@string/label_logout" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version_no"
        style="@style/regular_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/label_version"
        android:textColor="@color/transparent_white_90"
        android:textSize="10sp" />


</RelativeLayout>
